--- a/fc_community/fcuser/templates/login.html
+++ b/fc_community/fcuser/templates/login.html
@@ -15,16 +15,14 @@
     <div class="col-12">
         <form method="POST" action=".">
             {% csrf_token %}
-            <div class="form-group">
-                <label for="username">사용자 이름</label>
-                <input type="text" class="form-control" id="username" placeholder="사용자 이름" name = "username"/>
+            {% for field in form %}
+            <div class = "form-group">
+                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" />
             </div>
-            <div class="form-group">
-                <label for="password">비밀번호</label>
-                <input type="password" class="form-control" id="password" placeholder="비밀번호" name = "password"/>
-            </div>
+            {% endfor %}
             <button type="submit" class="btn btn-primary">로그인</button>
-            </form>
+        </form>
     </div>
 </div>
 {% endblock %}
