--- a/fc_community/fcuser/templates/login.html
+++ b/fc_community/fcuser/templates/login.html
@@ -20,6 +20,9 @@
                 <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                 <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" placeholder="{{ field.label }}" name="{{ field.name }}" />
             </div>
+            {% if field.errors %}
+            <span style="color :red">{{ field.errors }}</span>
+            {% endif %}
             {% endfor %}
             <button type="submit" class="btn btn-primary">로그인</button>
         </form>
