--- a/fc_community/fcuser/templates/register.html
+++ b/fc_community/fcuser/templates/register.html
@@ -32,7 +32,7 @@
                 <label for="re-password">비밀번호 확인</label>
                 <input type="password" class="form-control" id="re-password" placeholder="비밀번호 확인" name = "re-password"/>
             </div>
-            <button type="submit" class="btn btn-primary">등록</button>
+            <button type="submit" class="btn btn-primary" onclick="location.href='/'">등록</button>
             </form>
     </div>
 </div>
