--- a/4장/fc_shopping/fcproduct/templates/product.html
+++ b/4장/fc_shopping/fcproduct/templates/product.html
@@ -16,7 +16,7 @@
                 {% for product in product_list %}
                 <tr>
                     <th scope="row">{{ product.id }}</th>
-                    <th>{{ product.name }}</th>
+                    <th><a href="/product/{{ product.id }}">{{ product.name }}</a></th>
                     <th>{{ product.price|intcomma }}원</th>
                     <th>{{ product.register_dttm|date:'Y-m-d H:i' }}</th>
                 </tr>                
@@ -25,6 +25,7 @@
         </table>
     </div>
 </div>
+
 
 
 {% endblock %}
