--- a/4장/fc_shopping/fcproduct/templates/product.html
+++ b/4장/fc_shopping/fcproduct/templates/product.html
@@ -1,5 +1,34 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% block header %}
+<script>
+    function product_detail(id) {
+        $.ajax({
+    url: "/api/product/" + id,
+    success: function( result ) {
+      $("#product-"+id).popover({
+          html:true,
+          content : result.name + "<br/>" + result.price
+          }).popover('show');
+    }
+  });    
+    }
+    function product_leave(id) {
+            $("#product-"+id).popover('hide');
+    }   
+    
+$(document).ready(function(){
+    $.ajax({
+    url: "/api/product",
+    success: function( result ) {
+      console.log(result);
+    }
+  });
+  });
+</script>
+
+{% endblock %}
+
 {% block contents %}
 <div class = "row mt-5">
     <div class = "col-12">
@@ -16,7 +45,8 @@
                 {% for product in product_list %}
                 <tr>
                     <th scope="row">{{ product.id }}</th>
-                    <th><a href="/product/{{ product.id }}">{{ product.name }}</a></th>
+                <th><a id = "product-{{ product.id }}" onmouseenter="product_detail({{ product.id }});"
+                    onmouseleave="product_leave({{ product.id }});" href="/product/{{ product.id }}">{{ product.name }}</a></th>
                     <th>{{ product.price|intcomma }}원</th>
                     <th>{{ product.register_dttm|date:'Y-m-d H:i' }}</th>
                 </tr>                
